--- a/01-CSS/CSS-Positioning/homework/homework.css
+++ b/01-CSS/CSS-Positioning/homework/homework.css
@@ -7,6 +7,9 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
+    display: block;
+    text-align: center;
+
 
 }
 
@@ -14,25 +17,57 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 /* Ejercicio 2: Posicionar el header */
 
 /* Acá va tu código */
-
-
+#ejercicioDos {
+visibility: hidden;
+}
 
 /* Ejercicio 3: */
 
 /* Acá va tu código */
-
+#ejercicioTres {
+position: absolute;
+margin-top: 100px;
+left: 200px;
+}
 
 
 /* Ejercicio 4: */
 
 /* Acá va tu código */
-
-
+#ejercicioCuatro {
+position: absolute;
+ top: 20px; 
+ left: 0px; 
+ height: 100; 
+ width: 400px;
+ padding: 20px;
+}
 
 /* Ejercicio 5: */
 
 /* Acá va tu código */
+#ejercicioCinco {
+display: flex;
+ flex-direction: column-reverse ;
+ align-items: center;
+}
 
 
 
 /* Ejercicio 6. */
+#ejercicioCinco {
+align-self: flex-end;
+align-self: flex-start;
+
+ 
+
+}
+
+/* Ejercicio 7 */
+#ejercicioSiete {
+display: flex;
+flex-direction: column;
+align-items: center;
+flex-direction: column-reverse;
+background-color: lawngreen;
+} 
